[tool.poetry]
name = "throughput-testbench"
version = "0.1.0"
description = ""
authors = ["ameen-91 <mohammedameen9011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
